--- a/index.html
+++ b/index.html
@@ -691,10 +691,12 @@ East Africa has missed four consecutive rainy seasons, the worst drought in 40 y
             </p>
           </div>
           <div class="info">
-            <a href="https://ahmed200644.github.io/Water-Pollution-of-Africa/"
+            <a href="https://ahmed200644.github.io/Hunger_Problems_in_Africa/"
               >Read More</a
             >
+	<a href="https://ahmed200644.github.io/Hunger_Problems_in_Africa/">
             <i class="fas fa-long-arrow-alt-right"></i>
+		</a>
           </div>
         </div>
       </div>
